Updates from ShareLaTeX

--- a/ttm4905_msc/abstract_norwegian.tex
+++ b/ttm4905_msc/abstract_norwegian.tex
@@ -1,5 +1,11 @@
 \pagestyle{empty}
 \renewcommand{\abstractname}{Sammendrag}
 \begin{abstract}
- 
+ Flere virksomheter over hele verden vokser i størrelse og opplever hyppige endringer i bygningsmassen. Dette presenterer et krav om å administrere og håndtere disse endringene for å opprettholde en fornøyd kundebase. En måte å oppveie ulempene som hyppige oppdateringer kan medføre, er gjennom en innendørs karttjeneste. Ved å tilby en oppdatert, interaktiv og digital innendørs karttjeneste kan fordeler oppnås, både for bedrifter og deres klientell. MazeMap er et selskap som spesialiserer seg på å tilby innendørs karttjenester til et bredt utvalg av kunder som spenner fra universiteter og sykehus, til sportsarenaer og cruiseskip. Software as a service har blitt en stadig mer vanlig leveransemåte for IT-baserte produkter, og en stor andel av selskaper i programvareutviklingssjiktet benytter denne leveransemåten. I kjølvannet av dette har nye forretningsmodeller dukket opp som et resultat. En slik modell er den såkalte freemium-modellen, som har blitt grundig testet i forbrukermarkedet, men ikke i foretnings- og bedriftsmarkedet.
+
+
+Denne masteroppgaven tar sikte på å foreslå en freemium-basert forretningsmodell for selskaper som MazeMap, som er villige til å ta i bruk nye forretningsmodeller i foretning-til-foretnings- og foretning-til-foretning-\&-forbrukermarkedet. For å foreslå en slik forretningsmodell, har en internasjonal spørreundersøkelse blitt utført, og selskaper som vellykt benytter freemium som forretningsmodell i forretningsorienterte markeder har blitt undersøkt. Spørreundersøkelsen var rettet mot høyutdanningsinstitusjoner, og mottok 39 svar fra hele verden der 14 forskjellige land var representert. I resultatene uttrykte i utgangspunktet 64,1\% interesse for en innendørskarttjeneste, noe som senere økte til 84,6\% etter at de potensielle fordelene ved en slik tjeneste ble angitt. I paradigmet freemium, er det faktum at noen betaler for mange er et sentralt tema. I forhold til dette, målte undersøkelsen betalingsvillighet for Premium-funksjoner blant de spurte. Disse resultatene var i tråd med forventningene, da bare noen få indikerte en sterk betalingsvilje for disse funksjonene.
+
+
+Basert på spørreundersøkelsen og suksessfaktorene til selskapene med en vellykket freemium-modell, ble en forretningsmodell foreslått. Denne modellen ble utformet i det såkalte Business Model Canvas-rammeverket som gir både en tekstlig og visuell representasjon av den presenterte forretningsmodellen.
 \end{abstract}
