--- a/ttm4905_msc/appendixA.tex
+++ b/ttm4905_msc/appendixA.tex
@@ -3,6 +3,6 @@
 \begin{figure}[H]
     \centering
     \fbox{\includegraphics[width=\textwidth]{figs/letter.png}}
-    \caption{Invitation letter. The black box is a redacted proof of NTNU enrollment by the author}
+    \caption{The survey invitation letter. The black box is a redacted proof of the author's enrolment at \gls{ntnu}}
     \label{fig:letter}
 \end{figure}
