--- a/ttm4905_msc/chapter1.tex
+++ b/ttm4905_msc/chapter1.tex
@@ -1,48 +1,50 @@
 \chapter{Introduction}
-This chapter will introduce the reader to this thesis, where the motivation, scope and contribution is presented, which (along with Chapter 2) will serve to bind the thesis together and bring perspective to the reader.
 \section{Motivation}
 
 %hvorfor navigasjon er viktig
 
-The indoor mapping service \gls{mm} started as a venture from Wireless Trondheim, an R\&D company working closely (and cooperating) with \gls{ntnu} whose goal it is to create sustainable ventures from new ideas. MazeMap's main service is providing an indoor mapping service aimed at large institutions such as universities, hospitals, conference venues, shopping malls and more. Users are able to access the service on any computer, tablet or smartphone, where the indoor maps themselves is the main focal point. Navigation services are also available in many different forms, but using Wi-Fi is a readily available and easily deployed solution which has been co-developed with Cisco. This particular service uses a technique called trilateration\cite{BiczokMJK14}, and is easily implemented as it uses existing Wi-Fi infrastructure to facilitate the service.
+The indoor mapping service \gls{mm} started as a venture from Wireless Trondheim, an R\&D company working closely (and cooperating) with \gls{ntnu}, and whose goal it is to create sustainable ventures from new ideas. MazeMap's main service is providing an indoor mapping service aimed at large institutions such as universities, hospitals, conference venues, shopping malls and more. Users are able to access the service on any computer, tablet or smartphone, where the indoor maps themselves is the focal point. Navigation services are also available in many different forms, but using Wi-Fi is a readily available and easily deployed solution which has been co-developed with Cisco. This particular service uses a technique called trilateration~\cite{BiczokMJK14}, and is easily implemented as it uses existing Wi-Fi infrastructure to facilitate the service.
 
 
-\gls{mm} has a very scalable technical platform, in which a robust indoor-map-creating engine resides. This engine is able to convert digital floorplans into full-scale digital indoor maps that can be accessed from any device capable of running \gls{mm}'s application. Given its scalable nature, the time needed per customer is drastically reduced, and little involvement is needed from \gls{mm}'s perspective. Thus, in order to accelerate customer acquisition, a proposition can be made to change or alter the business model: A free model has been detrimental in the success of several start-ups in the consumer market, e.g. Dropbox, Skype, Waze and Snapchat, but it is of interest to see if this can be applied in a \gls{b2b} or a \gls{b2bc} setting with the same success.
+\gls{mm} has a very scalable technical platform, in which a robust indoor-map-creating engine resides. The engine is able to convert digital floorplans into full-scale, digital indoor maps that can be accessed from any device capable of running \gls{mm}'s software. Because of its scalable nature, the time needed per customer is low, and little involvement in the setup phase is needed from \gls{mm}'s perspective. Thus, in order to accelerate customer acquisition, a proposition can be made to change or alter the business model: A freemium model has been detrimental in the success of several start-ups in the consumer market, for example Dropbox, Skype, Waze and Snapchat, but it is interesting to see if this can be applied in a \gls{b2b} or a \gls{b2bc} setting with the same success.
 
 
 Two market drivers are particularly protruding when it comes to indoor maps:
 \begin{itemize}
-    \item The demand for indoor orientation as buildings become richer in numbers and more complex.
+    \item The demand for indoor orientation as buildings become more numerous and complex.
     \item The Internet of Things and fleet management.
 \end{itemize}
 
+As of 2015, one of the world's largest shopping mall by total area is the Dubai Mall in Dubai, UAE~\cite{aleksandarjevtic2015}. With its 1,124,000 square meters of space and around 1,200 shops, it was one of the most visited buildings on the planet in 2011, and as much as 34 million people visited it~\cite{anderson2012evolution}, a number that rose to 80 million in 2014~\cite{marysophia2015}. With establishments of such gargantuan proportions, the inherent need for being able to find different points-of-interest presents itself. One apparent solution to this, is of course an \gls{ims} that may be provided to the customers via a smartphone application or stationary touch screens. As opposed to static maps, a digital interactive map allows for greater customer immersion, while providing more valuable information and improving the overall visitor experience. For establishments, analytical tools may be used to track customers in regards to habits, frequency of visits etc. to improve the offering to visiting clientele. Furthermore, establishments with large areas such as universities and hospitals are able to reduce stress and nervousness among visitors, by employing an \gls{ims} that can be used before a visit to familiarise the environment~\cite{mazemaphosp}. As more buildings are being built and experience internal change, updating static maps several times per year can be an undertaking that is readily mitigated by having digital, adaptable maps.
+
+
+The Global Standards Initiative on Internet of Things has defined the term \gls{iot} as a \textit{"global infrastructure for the information society, enabling advanced services by interconnecting (physical and virtual) things based on existing and evolving interoperable information and communication technologies."}~\cite{itu2016}. In essence, this means that the physical world can be shaped in a way that improves accuracy and efficiency, while granting potential economic benefits~\cite{friess2013internet}. The \gls{iot} is closely related to the concept of fleet management, which in this case pertains to objects connected to the \gls{iot} that may need to be located on a regular basis. This relates to indoor maps in the sense that as physical objects are connected to the Internet, the location of these objects may be obtained from an \gls{ims}. Hospitals are able to show personnel where an ever-changing border of a clean/dirty zone is, as well as showing where equipment is currently situated. Universities are for example able to show its staff and students where they can find the nearest printer, as opposed to merely providing a textual description of where printers are located. As more physical objects are incorporated into the \gls{iot}, the need for fleet management increases and digital indoor maps may be an effective way to accommodate this need. 
 
 \section{Scope \& Objectives}
-%Customer segs: 2 different: HEIs and Hospitals
-In order to achieve the goal of determining the effectiveness and feasibility of a free model in an international \gls{b2bc}-market and proposing a fitting business model, it is necessary to narrow down the aspects considered in this thesis. Furthermore, the aim is also to give the reader a clear and concise overview of the matter at hand.
+In order to achieve the goal of determining the effectiveness and feasibility of a freemium model in an international \gls{b2bc}-market, while proposing a fitting business model, it is necessary to narrow down the aspects considered in this thesis. Furthermore, the aim is also to give the reader a clear and concise overview of the topics discussed.
 
 \subsection{Scope}
-MazeMap already serves a large base of customers around the world, with their main bottleneck in expanding further being customer acquisition. As means to remedy this and to accelerate customer acquisition the freemium can be proposed. Given \gls{mm}'s robust map-generating-engine, the main focus is shifted away from any technical limitations or inherent flaws on \gls{mm}'s end, and is shifted towards the viability of a freemium model. Given the scale of a global survey, the survey presented later in the thesis will focus on an already established customer segment, namely \gls{hei}s. This restriction is in place in order to more specifically target this thesis's goal of proposing a business model and determining if a freemium business model is feasible, rather than exploring new customer segments. 
+MazeMap already serves a large base of customers around the world, with their main bottleneck in expanding further being customer acquisition. As means to remedy this and to accelerate customer acquisition, the freemium model can be proposed. Given \gls{mm}'s robust map-generating-engine, the main focus is shifted away from any technical limitations or inherent flaws on \gls{mm}'s end, and is moved towards the viability of a freemium model. Given the scale of a global survey, the survey presented later in the thesis will focus on an already established customer segment, namely \gls{hei}s. This restriction is in place in order to more specifically target this thesis's goal of proposing a business model and determining if a freemium business model is feasible, rather than exploring new customer segments. 
 
 \subsection{Objectives}
-This thesis aims to determine the viability and feasibility of a free model in a \gls{b2bc}-market, and to propose an appropriate business model in this particular paradigm. In short we can describe the objectives in the following manner:
+This thesis aims to determine the viability and feasibility of a freemium model in a \gls{b2bc}-market, and to propose an appropriate business model in this particular paradigm. In short the objectives can be described in the following manner:
 \begin{enumerate}
-    \item Investigate if there is a demand for an \gls{ims} operating under the free model 
+    \item Investigate if there is a demand for an \gls{ims} operating under the free model
     \item Discuss and interpret the viability of such a service at an international level
     \item Propose a business model based on the findings and its surrounding discussion
 \end{enumerate}
 Taking the scope into consideration, this forms the basis of the main research question for this thesis: Is a free model viable as a business model in a \gls{b2bc}-market on an international level, and can this model potentially accelerate customer acquisition?
 
 \section{Contribution}
-Mainly, the contribution and novelty of this thesis is aimed at business owners wishing to expand their offerings to their base of customers, by enabling an indoor mapping service such as MazeMap. Furthermore, the central theme of the thesis regarding the viability of freemium in a \gls{b2bc} market, may also serve businesses looking to expand their offerings and who dares to venture in new and alternative business models. The key contributions consists of the market survey made to answer the objectives set in the section above, and the resulting proposal of a business model based upon the data gathered.   
+Mainly, the contribution and novelty of this thesis is aimed at business owners wishing to expand their offerings to their customers, by employing an indoor mapping service such as MazeMap. Furthermore, the central theme of the thesis regarding the viability of freemium in a \gls{b2bc} market, may also serve businesses looking to expand their offerings and who dares to venture in new and alternative business models. The key contributions consists of the market survey made to answer the objectives set in the section above, and the resulting proposal of a business model based upon the data gathered.   
 
 \section{Outline}
-Chapter 1 introduces the reader to the thesis where motivation, scope and objectives are presented alongside the contributions and related work. In the second chapter, relevant terms such as "freemium", "B2B", "B2C" and "B2B\&C" are introduced in order to provide the user with definitions central to the thesis' themes. Chapter 3 presents the methodology employed for researching the problem and introduces the survey. Chapter 4 discusses various companies and their products, and how these have gained success or failed to obtain it, by employing a freemium business model in a \gls{b2b} market. Chapter 5 presents and discusses the results obtained in the survey, and chapter 6 presents the proposed, freemium-based business model based upon the research done.
+Chapter 1 introduces the reader to the thesis where motivation, scope and objectives are presented alongside the contributions and related work. In the second chapter, relevant terms such as "freemium", "B2B", "B2C" and "B2B\&C" are introduced in order to provide the user with definitions central to the thesis' themes. Chapter 3 presents the methodology employed for researching the problem and introduces the survey. Chapter 4 discusses various companies and their products, and how these have gained success or failed to obtain it, by employing a freemium business model in the \gls{b2b} market. Chapter 5 presents and discusses the results obtained in the survey, and chapter 6 presents the proposed, freemium-based business model based upon the research done.
 Chapter 7 covers the concluding remarks along with suggestions for further studies and research on the subject. Appendix A contains the invitation letter that was sent in relation to the survey, and Appendix B presents the survey as it was presented to the respondents. Lastly Appendix C contains a description of the Business Model Canvas framework used for proposing a business model in Chapter 6. 
 
 
 \section{Related Work}
-Wireless Trondheim along with MazeMap have both provided several semester projects and master theses in cooperation with \gls{ntnu}. Three master theses/semester projects protrudes as being particularly relevant in relation to this thesis: "Business Potential for Data from Wi-Fi Networks" by Bergdendal, Petter 2014, "Campusguiden" by Halvorsen, Christian 2011 and "International Business Potential for Analytics of Room Utilisation" by Binde, Karl 2015~\cite{petterbergendal2014} \cite{christianhalvorsen2011} \cite{karlbernhoffbinde2015}. The first of these focuses on MazeMap with the targeted customer segment being shopping malls, and the research done was centered around a survey sent out to various shopping malls. The main goal of this semester project was to discover a way to generate value from analytics of data provided by Wi-Fi usage, with features discussed being counting visitors, duration of visits and flow of visitors. In relation to this thesis, the market segment and targeted countries differ. The second focuses on MazeMap's predecessor "Campusguiden", with technical aspects of the service being the focal points, but various financial aspects were discussed as well. Compared to this thesis, its methodology were solely qualitative in nature, and focuses more on the technical aspect more than what is discussed in this thesis. The latter of these focuses on both the technical and financial aspects, with the main emphasis being on the financial aspects. Results were obtained through surveys sent out to \glspl{hei} worldwide, eventually producing a proposed business model for MazeMap that focused on how analytics could be used to better utilise rooms for \glspl{hei}. The targeted customer segment is the same as in this thesis, and as such makes it relevant. However, the proposed business models and scope vary greatly from this thesis
+Wireless Trondheim along with MazeMap have both provided several semester projects and master theses in cooperation with \gls{ntnu}. Three master theses/semester projects protrudes as being particularly relevant in relation to this thesis: "Business Potential for Data from Wi-Fi Networks" by Bergdendal, Petter 2014, "Campusguiden" by Halvorsen, Christian 2011 and "International Business Potential for Analytics of Room Utilisation" by Binde, Karl 2015~\cite{petterbergendal2014} \cite{christianhalvorsen2011} \cite{karlbernhoffbinde2015}. The first of these focuses on MazeMap with the targeted customer segment being shopping malls, and the research done was centred around a survey sent out to various shopping malls. The main goal of this semester project was to discover a way to generate value from analytics of data provided by Wi-Fi usage, with features discussed being counting visitors, duration of visits and flow of visitors. In relation to this thesis, the market segment and targeted countries differ. The second focuses on MazeMap's predecessor "Campusguiden", with the technical aspect of the service being the focal point, but various financial aspects were discussed as well. Compared to this thesis, its methodology were solely qualitative in nature, and focuses more on the technical aspect compared to what is discussed in this thesis. The latter of these focuses on both the technical and financial aspects, with the main emphasis being on the financial aspects. Results were obtained through surveys sent out to \glspl{hei} worldwide, eventually producing a proposed business model for MazeMap that focused on how \glspl{hei} could employ analytics to better utilise available space. The targeted customer segment is the same as in this thesis, and as such makes it relevant. However, the proposed business models and scope vary greatly from this thesis
 
 
-The master thesis "Freemium for Large Enterprises" by Jepson, Lundin 2011~\cite{jepson2009freemium} is relevant to this thesis in that it is a case study of a \gls{b2b} based company that has successfully implemented freemium as a business model. It discusses how freemium can be employed to generate more leads in an enterprise market, how to stimulate demand for premium features, user-friendlyness and the importance of being first-to-market. Given its relevance to this thesis' central themes it is discussed in Chapter 4.
+The master thesis "Freemium for Large Enterprises" by Jepson, Lundin 2011~\cite{jepson2009freemium} is relevant to this thesis in that it is a case study of a \gls{b2b} based company that has successfully implemented freemium as a business model. It discusses how freemium can be employed to generate more leads in an enterprise market, how to stimulate demand for premium features, user-friendliness and the importance of being first-to-market. Given its relevance to this thesis' central themes it is discussed in Chapter 4.
