--- a/ttm4905_msc/chapter7.tex
+++ b/ttm4905_msc/chapter7.tex
@@ -1,16 +1,16 @@
 \chapter{Concluding Remarks and Further Work}
 \section{Concluding Remarks}
-This master's thesis has investigated if there is potential for an \gls{ims} that employs the freemium business model in a market segment consisting of \glspl{hei}. How MazeMap can alter their business model according to the needs of this particular market segment has been mapped. This has been achieved through the international market survey, case studies of \gls{b2b}-based companies and as a consequence a business model has emerged that functions as a proposition on how the freemium business model should be implemented. 
+This master's thesis has investigated if there is potential for an \gls{ims} that employs the freemium business model in a market segment consisting of \glspl{hei}. How MazeMap can alter their business model according to the needs of this particular market segment has been mapped. This has been achieved through the international market survey, case studies of \gls{b2b}-based companies and as a consequence a business model has emerged that acts as a proposition on how the freemium business model should be implemented. 
 
 
-The background introduced terms like freemium, \gls{b2b}, \gls{b2c} and \gls{b2bc} to gain an understanding of the underlying principles that this thesis is built upon. Here, the potential benefits and caveats of applying a freemium model was presented, which also has been under scrutiny throughout this thesis. The case studies of Chapter 4 showed how a selection business in the \gls{b2b} market had managed to obtain success by employing a freemium business model, but it also highlighted any shortcomings that might have arisen as a consequence. The survey was presented in Chapter 5, along with the results and the discussion of the results. The findings from the survey, case studies and background created a foundation for proposing a freemium-based business model which was presented in Chapter 6, with the main contributions being how and what to monetise, as well as an increased market presence through marketing and the attendance of industry events for accelerating customer acquisition. 
+The background introduced terms like freemium, \gls{b2b}, \gls{b2c} and \gls{b2bc} to gain an understanding of the underlying principles that this thesis is built upon. Here, the potential benefits and caveats of applying a freemium model was presented, which also has been under scrutiny throughout this thesis. The case studies of Chapter 4 showed how a selection of businesses in the \gls{b2b} market had managed to obtain success by employing a freemium business model, but it also highlighted some shortcomings that might have arisen as a consequence. The survey was presented in Chapter 5, along with the results and the discussion of the results. The findings from the survey, case studies and background created a foundation for proposing a freemium-based business model which was presented in Chapter 6, with the main contributions being how and what to monetise, as well as an increased market presence through marketing and the attendance of industry events for accelerating customer acquisition. 
 
 
-A total of 39 respondents from 14 different countries responded to the survey, with most of the respondents being representatives of \glspl{hei} in Great Britain and The Netherlands. In total, the survey garnered a response rate of 20.2\%. The survey revealed that in the beginning of the survey, 64.1\% showed interest in an \gls{ims} without explicitly knowing about the potential benefits, and after this was stated this percentage was raised to 84.6\%. The number of respondents willing to pay for premium features were quite low, but in the freemium paradigm this matters little. An overwhelming majority of respondents also stated that price was a barrier in the potential procurement of an \gls{ims}. With the price factor trivialised by the introduction of freemium, it shows great potential for applying this type of business model at least for \glspl{ims}.
+A total of 39 respondents from 14 different countries responded to the survey, with most of the respondents being representatives of \glspl{hei} in Great Britain and The Netherlands. In total, the survey garnered a response rate of 20.2\%. It was revealed that in the beginning of the survey, 64.1\% showed interest in an \gls{ims} without explicitly knowing about the potential benefits, and after potential benefits were stated this increased to 84.6\%. The number of respondents willing to pay for premium features were quite low, but in the freemium paradigm this matters little. An overwhelming majority of respondents also stated that price was a barrier in the potential procurement of an \gls{ims}. With the price factor trivialised by the introduction of freemium, it shows great potential for applying this type of business model at least for \glspl{ims}.
 
 
-The case studies showed that customer conversion, having a good product, stimulating demand for premium features and solid customer self-service mechanisms were all important success factors for any venture that wishes to apply the freemium business model in a \gls{b2b} setting. In turn, these and other important factors contributed in shaping the proposed business model, that is not necessarily only applicable to \glspl{ims}, but can be utilised in a broader sense for any company that wish to employ a freemium business model in a \gls{b2b} or \gls{b2bc} market. 
+The case studies showed that customer conversion, having a good product, stimulating demand for premium features and solid customer self-service mechanisms were all important success factors for any venture that wishes to apply the freemium business model in a \gls{b2b} setting. In turn, these factors contributed to shape the proposed business model, which is not necessarily only applicable to producers of \glspl{ims}, but can be utilised in a broader sense for any company that wish to employ a freemium business model in a \gls{b2b} or \gls{b2bc} market. 
 
 
 \section{Future Work}
-Demand for an \gls{ims} as well as security concerns were also major factors that may hinder the procurement of such a service even if it is free. It would be natural to further research how these factors can be mitigated, so that one of the main goals of freemium namely increasing the customer base may be achieved. Furthermore, a more uniform representation of different countries in a survey is also something left to be desired. It is hard to determine the factors that caused this, but language barriers were certainly present in the surveying process. If surveys made in different languages were a possibility, it could possibly increase the response rate drastically. Additionally, a more qualitative survey could be performed, where the customer segment is allowed to unfold on important matters in relation to freemium based \glspl{ims}. Lastly, this thesis focused on one particular market segment, and there are several other segments to explore and survey. It is therefore a possibility to gain a better understanding of how the service delivered can get more customers, by targeting other segments of the market. 
+The demand for an \gls{ims} as well as security concerns were also major factors that may hinder the procurement of such a service even if it is free. It would be natural to further research how these factors can be mitigated, so that one of the main goals of freemium namely increasing the customer base may be achieved. Furthermore, a more uniform representation of different countries in a survey is also something left to be desired. It is hard to determine the factors that caused this, but language barriers were certainly present in the surveying process. If surveys made in different languages were a possibility, it could possibly increase the response rate drastically. Additionally, a more qualitative survey could be performed, where the customer segment is allowed to unfold on important matters in relation to freemium based \glspl{ims}. Lastly, this thesis focused on one particular market segment, and there are several other segments to explore and survey. It is therefore a possibility to gain a better understanding of how the service delivered can get more customers, by targeting other segments of the market. 
