--- a/ttm4905_msc/glossary.tex
+++ b/ttm4905_msc/glossary.tex
@@ -11,9 +11,9 @@ description={A dummy symbol }}
 \newacronym{b2c}{B2C}{Business-to-consumer}
 \newacronym{b2bc}{B2B\&C}{Business-to-business-\&-consumer}
 \newacronym{mm}{MM}{MazeMap}
-\newacronym{saas}{SaaS}{Software-as-a-service}
+\newacronym{saas}{SaaS}{Software as a service}
 \newacronym{hei}{HEI}{Higher Education Institution}
-\newacronym{sme}{SME}{Small and Medium-sized Enterprises}
+\newacronym{sme}{SME}{Small and Medium-sized Enterprise}
 \newacronym{arr}{ARR}{Annual Recurring Revenue}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{smb}{SMB}{Small and Medium-sized Business}
@@ -26,5 +26,6 @@ description={A dummy symbol }}
 \newacronym{ble}{BLE}{Bluetooth Low Energy}
 \newacronym{poi}{POI}{Point-of-interest}
 \newacronym{nhs}{NHS}{National Health Service}
+\newacronym{iot}{IoT}{Internet of Things}
 
 
