--- a/ttm4905_msc/main.bib
+++ b/ttm4905_msc/main.bib
@@ -254,7 +254,7 @@
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {fredwilson2006,
+@ONLINE {fredwilson20062,
     author = "Fred Wilson",
     title  = "The Freemium Business Model",
     month  = "mar",
@@ -343,7 +343,7 @@
     note  = "[Online; accessed 21-06-2016]"
 },
 
-@ONLINE {fredwilson2006,
+@ONLINE {fredwilson20061,
     author = "Fred Wilson",
     title  = "My Favorite Business Model",
     month  = "may",
@@ -386,17 +386,17 @@
 },
 
 @article{Muzellec2015139,
-title = "Two-sided Internet platforms: A business model lifecycle perspective ",
-journal = "Industrial Marketing Management ",
-volume = "45",
-number = "",
-pages = "139 - 150",
-year = "2015",
-note = "",
-issn = "0019-8501",
-doi = "http://dx.doi.org/10.1016/j.indmarman.2015.02.012",
-url = "http://www.sciencedirect.com/science/article/pii/S0019850115000474",
-author = "Laurent Muzellec and Sébastien Ronteau and Mary Lambkin",
+    title = "Two-sided Internet platforms: A business model lifecycle perspective ",
+    journal = "Industrial Marketing Management ",
+    volume = "45",
+    number = "",
+    pages = "139 - 150",
+    year = "2015",
+    note = "",
+    issn = "0019-8501",
+    doi = "http://dx.doi.org/10.1016/j.indmarman.2015.02.012",
+    url = "http://www.sciencedirect.com/science/article/pii/S0019850115000474",
+    author = "Laurent Muzellec and Sébastien Ronteau and Mary Lambkin",
 },
 
 @ONLINE {mazemaphospitals2015,
@@ -440,3 +440,45 @@ author = "Laurent Muzellec and Sébastien Ronteau and Mary Lambkin",
     url    = "http://nonlinearthinking.typepad.com/nonlinear_thinking/2008/07/the-business-model-canvas.html",
     note  = "[Online; accessed 22-06-2016]
 },
+
+@ONLINE {aleksandarjevtic2015,
+    author = "Aleksandar Jevtic",
+    title  = "15 Biggest Malls in the World",
+    month  = "aug",
+    year   = "2015",
+    url    = "http://www.insidermonkey.com/blog/15-biggest-malls-in-the-world-367683/",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@book{anderson2012evolution,
+  title={Evolution of a retail streetscape: DP Architects on Orchard Road},
+  author={Anderson, Collin and Frampton, Kenneth and Maki, Fumihiko},
+  year={2012},
+  publisher={Images Publishing}
+},
+
+@ONLINE {marysophia2015,
+    author = "Mary Sophia",
+    title  = "Dubai Mall Sees 80m Visitors in 2014",
+    month  = "feb",
+    year   = "2015",
+    url    = "http://gulfbusiness.com/dubai-mall-sees-80m-visitors-2014/#.VbO9s1Wqqqk",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@ONLINE {itu2016,
+    author = "ITU",
+    title  = "Internet of Things Global Standards Initiative",
+    month  = "jun",
+    year   = "2016",
+    url    = "http://www.itu.int/en/ITU-T/gsi/iot/Pages/default.aspx",
+    note  = "[Online; accessed 22-06-2016]
+},
+
+@book{friess2013internet,
+  title={Internet of things: converging technologies for smart environments and integrated ecosystems},
+  author={Friess, Peter},
+  year={2013},
+  publisher={River Publishers}
+},
+
