--- a/ttm4905_msc/main.tex
+++ b/ttm4905_msc/main.tex
@@ -6,10 +6,10 @@
 \usepackage{pbox}
 \usepackage{csquotes}
 
-\title{International potential for a free model in a B2B\&C market} % The title of your assignement; NB use \newlinetitle to start a newline
+\title{International Potential for a Free Model in a B2B\&C market} % The title of your assignement; NB use \newlinetitle to start a newline
 \author{Kristian Tagesen} % Your firstname and lastname
 \professor{Jan A. Audestad, ITEM} % Affiliation = ITEM for instance
-\supervisor{Thomas Jelle, ITEM}
+\supervisor{Thomas Jelle, MazeMap}
 
 %% Uncomment the following in case you want subfigures; note that there will be a warning for the caption package
 % \let\subcaption\undefined
@@ -68,9 +68,9 @@
 \cleardoublepage
 
 %% include if relevant
-\listofalgorithms
-\addcontentsline{toc}{chapter}{List of Algorithms}
-\cleardoublepage
+% \listofalgorithms
+% \addcontentsline{toc}{chapter}{List of Algorithms}
+% \cleardoublepage
 
 %% include if relevant
 %\printglossary[title=List of Symbols, style=long]
