--- a/ttm4905_msc/problem_description.tex
+++ b/ttm4905_msc/problem_description.tex
@@ -1,7 +1,7 @@
 \begin{titlingpage}
 
 \noindent
-\begin{tabular}{@{}p{4cm}l}
+\begin{tabular}{@{}p{2cm}l}
 \textbf{Title:} 	& \thetitle \\
 \textbf{Student:}	& \theauthor \\
 \end{tabular}
@@ -10,7 +10,7 @@
 \noindent\textbf{Problem description:}
 \vspace{2ex}
 
-\noindent This thesis will continue the preliminary work done in the report written in the autumn semester of 2015, concerning the potential of the freemium business model in an indoor mapping solution. While the report consisted of a survey that was done nationally, this thesis will expand to include the international market, and will have a narrower scope in that two customer segments will be surveyed. A business model fitting the freemium paradigm will be suggested, and a survey will be presented along with its results. The main goal of the thesis is to try to acertain whether a freemium model will work in a B2B\&C market, more specifically for an indoor mapping solution.
+\noindent This thesis will continue the preliminary work done in the report written in the autumn semester of 2015, concerning the potential of the freemium business model in an indoor mapping solution. While the report consisted of a survey that was done nationally, this thesis will expand to include the international market, and will have a narrower scope in that two customer segments will be surveyed. A business model fitting the freemium paradigm will be suggested, and a survey will be presented along with its results. The main goal of the thesis is to try to ascertain whether a freemium model will work in a B2B\&C market, more specifically for an indoor mapping solution.
 \vspace{6ex}
 
 \noindent
